# 2guys1code

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  README.md  builddocker.sh  pyproject.toml  pytest.ini  rundocker.sh  rundockerdev.sh
.requests/: 2.1_get_game.http  2_get_games.http  3_join_game.http  5_add_action.http  create_game.http  start_game.http
poker/: .coverage  README.md  card.py  card_collection.py  conftest.py  constants.py  deck.md  deck.py  hand.py  hand_finder.py  player.py  poker.py  poker_errors.py  pot.py  pyproject.toml  shuffler.py  test_card.py  test_card_collection.py  test_deck.py  test_draw_poker.py  test_factories.py  test_hand.py  test_hand_finder.py  test_holdem_poker.py  test_poker.py  test_pot.py  test_shuffler.py  test_turn_contextmanager.py  turn.py
poker/.history/: deck_20220305020030.md  deck_20220305020241.md  deck_20220305020243.md  deck_20220305020256.md  deck_20220305020258.md  deck_20220305020311.md  deck_20220305020341.md  deck_20220305020344.md  deck_20220305020520.md  deck_20220305020527.md  deck_20220305020536.md  deck_20220305020554.md  deck_20220305020556.md  deck_20220305020607.md  deck_20220305020617.md  deck_20220305020619.md  deck_20220305020621.md  deck_20220305020627.md  deck_20220305020629.md  deck_20220305020632.md  deck_20220305020633.md  deck_20220305020636.md  deck_20220305020638.md  deck_20220305020644.md  deck_20220305020648.md  deck_20220305020650.md  deck_20220305020656.md  deck_20220305020658.md  deck_20220305020701.md  deck_20220305020703.md  deck_20220305020708.md  deck_20220305020725.md  deck_20220305020730.md  deck_20220305020736.md  deck_20220305020740.md  deck_20220305020743.md  deck_20220305020746.md  deck_20220305020752.md  deck_20220305020804.md  deck_20220305020809.md  (+768 more)
(+142 files in other folders)
