[tool.poetry]
name = "poker-game"
version = "0.1.0"
description = ""
authors = ["2guys1Code <2guys1code@protonmail.com>"]
packages = [{include = "poker_pkg", from = "src"}, {include = "api", from = "src"} ]

[tool.poetry.scripts]
poker = "poker_pkg.main:main"
pokerapi = "api.main:start"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.941"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
pytest-watch = "^4.2.0"
pylint = "^2.14.5"
httpx = "^0.23.1"
requests = "^2.28.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79