[tool.poetry]
name = "poker"
version = "0.1.0"
description = ""
authors = ["martinreidy <wormword@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
