[tool.poetry]
name = "poker"
version = "0.1.0"
description = ""
authors = ["2guys1Code <2guys1code@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.941"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
